--- a/ansible/tasks/setupZFStask.yml
+++ b/ansible/tasks/setupZFStask.yml
@@ -13,9 +13,16 @@
 - debug: msg='ZFS pool {{ item.name }} exists? -> [{{ item.name == zfs.poolName }}] It has {{ item.free }} free space out of {{ item.size }}.'
   with_items: '{{ ansible_zfs_pools }}'
 
-- name: Create zsh pool '{{zfs.poolName}}' with 3 disks and cache
-  shell: 'zpool create -o ashift=12 {{zfs.poolName}} raidz {{zfs.DISK1}} {{zfs.DISK2}} {{zfs.DISK3}} cache {{zfs.CACHEDISK}}'
+- name: Create zsh pool '{{zfs.poolName}}' with 2 disks and cache
+  shell: 'zpool create -o ashift=12 {{zfs.poolName}} mirror {{zfs.DISK1}} {{zfs.DISK2}} cache {{zfs.CACHEDISK}}'
   when: 'not (ansible_zfs_pools|length > 0 and ansible_zfs_pools[0].name == zfs.poolName)'
+
+- debug: msg='ZFS pool {{ item.name }} exists? -> [{{ item.name == zfs.poolName2 }}] It has {{ item.free }} free space out of {{ item.size }}.'
+  with_items: '{{ ansible_zfs_pools }}'
+
+- name: Create zsh pool '{{zfs.poolName2}}' with 2 disks
+  shell: 'zpool create -o ashift=12 {{zfs.poolName2}} mirror {{zfs.DISK3}} {{zfs.DISK4}}'
+  when: 'not (ansible_zfs_pools|length > 0 and ansible_zfs_pools[0].name == zfs.poolName2)'
 
 - name: Create file system for personal files
   zfs:
