--- a/ansible/vars/main_vars.yml
+++ b/ansible/vars/main_vars.yml
@@ -4,8 +4,10 @@ zfs: {
   poolName: dataPool,
   DISK1: '/dev/disk/by-id/scsi-123abc',
   DISK2: '/dev/disk/by-id/scsi-456def',
-  DISK3: '/dev/disk/by-id/scsi-789ghi',
   CACHEDISK: '/dev/disk/by-id/scsi-424242ababab',
+  poolName2: dataPool2,
+  DISK3: '/dev/disk/by-id/scsi-123abc',
+  DISK4: '/dev/disk/by-id/scsi-456def',
 }
 
 usergroups:
