--- a/ansible/tasks/setupSambaTask.yml
+++ b/ansible/tasks/setupSambaTask.yml
@@ -12,11 +12,9 @@
     name: smbd
     state: started
 
-# TODO check if users already exist
-- name: Create samba users
-  shell: "(echo {{ item['smbpasswd'] }}; echo {{ item['smbpasswd'] }}) | smbpasswd -s -a {{ item['name'] }}"
-  with_items:
-    - "{{users}}"
+- name: Create/update samba users
+  include_tasks: "smbusers.yml"
+  loop: "{{users}}"
 
 - name: Configuring samba shares
   template:
@@ -25,7 +23,4 @@
     owner: root
     group: root
     mode: 0644
-- name: Restart smbd
-  ansible.builtin.service:
-    name: smbd
-    state: restarted
+
