--- a/ansible/vars/main_vars.yml
+++ b/ansible/vars/main_vars.yml
@@ -6,9 +6,6 @@ zfs: {
   DISK2: '/dev/disk/by-id/scsi-456def',
   DISK3: '/dev/disk/by-id/scsi-789ghi',
   CACHEDISK: '/dev/disk/by-id/scsi-424242ababab',
-  Vm-pool: Vm-pool,
-  DISK4: '/dev/disk/by-id/scsi-123abc',
-  DISK5: '/dev/disk/by-id/scsi-456def',
 }
 
 usergroups:
@@ -28,6 +25,7 @@ shared_folders:
   - {name: 'movie', path: '/{{zfs.poolName}}/media/movie'}
   - {name: 'files', path: '/{{zfs.poolName}}/files/files'}
   - {name: 'Shared folder', path: '/{{zfs.poolName}}/personal/all'}
+  - {name: 'Shared folder', path: '/{{zfs.poolName}}/files/all'}
   - {name: 'Shared Backup Folder', path: '/{{zfs.poolName}}/backup/all'}
 
 shared_folders_group: family
